--- a/superset/translations/zh/LC_MESSAGES/messages.po
+++ b/superset/translations/zh/LC_MESSAGES/messages.po
@@ -29,6 +29,10 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0\n"
 "Generated-By: Babel 2.8.0\n"
 
+#: superset/config.py:195
+msgid "LiangData"
+msgstr "量析"
+
 #: superset/app.py:225
 msgid "Home"
 msgstr "主页"
